--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,19 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display:flex; /*body container to make column*/
+  flex-direction: column;
+}
+
+.header,
+.footer{
+  display:flex; /*header & footer container */
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.footer{
+  background: #eeeeee;
 }
 
 img {
@@ -16,6 +29,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 12px;
 }
 
 input {
@@ -24,4 +38,29 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+/* container for logo, input, buttons */
+.content{
+  flex:1;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/*remove list bullets*/
+ul{
+  display: flex; /*container for each ul*/
+  list-style: none;
+  gap: 16px;
+  /* hug corners */
+  margin: 0; 
+  padding: 0;
+}
+
+/* remove link color/underline */
+a {
+  text-decoration: none;
+  color: black;
 }
