--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -8,6 +8,10 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  gap: 15px;
+  grid-template-columns: 400px 1200px;
+  grid-template-rows: 100px 100px 500px 100px;
 }
 
 .container div {
@@ -21,18 +25,22 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-column: 1/-1;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-row: 2/4;
 }
 
 .nav {
   background-color: #00DDFF;
+  grid-column: 2/span;
 }
 
 .article {
   background-color: #bccbde;
+  grid-column: 2/span;
 }
 
 .article p {
@@ -44,4 +52,5 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/-1;
 }
